2d_stop-light.html: uses border to delimit cells with same pvName

--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -1878,7 +1878,7 @@
 					containerDiv = document.createElement("div");
 					containerDiv.className = "widgetContainerDiv";
 					containerDiv.id = "widget-" + id + "-container";
-					containerDiv.style["background-color"] = "rgba(0,0,0,0.2)";
+					//containerDiv.style["background-color"] = "rgba(0,0,0,0.2)";
 					containerDiv.style.zIndex = Object.keys(page_.widgets).length;
 
 					widgetCover = document.createElement("div");
