--- a/WebGUI/html/widgets/2d_stop-light.html
+++ b/WebGUI/html/widgets/2d_stop-light.html
@@ -9,7 +9,7 @@
 
 		    body {
 			  font: 10px sans-serif;
-			  background: rgba(250, 255, 255, 1);
+			  background: transparent;!rgba(250, 255, 255, 1);
 			  margin: 0px !important;
 			}
 
@@ -29,12 +29,12 @@
 			//init()
 
 			var pv_settings_ = [];
-			var parameters_ = {class: "", "upload file": ""};
+			var parameters_ = {class: "", "upload file": "", "background color": "transparent"};
 
 			//define data sample
 			//each cell contain
 			//{
-			//  id:counter
+			//    id:counter
 			//  , y:i
 			//  , x:j
 			//  , pvName:pv
@@ -71,6 +71,7 @@
 
 			function drawWidget(widget, parameters)
 			{
+				document.getElementsByTagName("body")[0].style.backgroundColor = parameters_["background color"];
 				newPVTable();
 			}
 
@@ -107,35 +108,37 @@
 					for (var cell = 1; cell <= _xSize; cell++)
 					{
 						i= (row - 1)*_xSize + (cell - 1);
-						var j = 1;
-						if (i > 0  && tabledata[i].pvName != "-1" && tabledata[i-j].pvName == tabledata[i].pvName)
+
+						var td = document.createElement('td');
+						var center = document.createElement('center');
+						var a = document.createElement('a');
+						//td.id = "td" + row + "-" + cell;
+						//center.id = "center" + row + "-" + cell;
+						//a.id = "a" + row + "-" + cell;
+						tds[i] = td;
+
+						center.appendChild(a);
+						td.appendChild(center);
+						tr.appendChild(td);
+
+						// fill each cell of table
+						if (tabledata[i].pvName != "-1")
 						{
-							//while (tds[i-j]!=undefined) tds[i-j].colSpan = ++j;
-							if (tds[i-j]) tds[i-j].colSpan = ++j;
+							tds[i].firstElementChild.firstElementChild.innerHTML = "+";//tabledata[i].pvName;
+							tds[i].style.backgroundColor = "rgba(0, 230, 64, 1)";
 						}
-						else
+						
+						//remove right border if next cell has the same pvName
+						if (i > 0  && tabledata[i].pvName != "-1" && tabledata[i+1] && tabledata[i+1].pvName == tabledata[i].pvName)
 						{
-							var td = document.createElement('td');
-							var center = document.createElement('center');
-							var a = document.createElement('a');
-							//td.id = "td" + row + "-" + cell;
-							//center.id = "center" + row + "-" + cell;
-							//a.id = "a" + row + "-" + cell;
-							tds[i] = td;
-
-							center.appendChild(a);
-							td.appendChild(center);
-							tr.appendChild(td);
-
-							// fill each cell of table
-							if (tabledata[i].pvName != "-1")
-							{
-								tds[i].firstElementChild.firstElementChild.innerHTML = "+";//tabledata[i].pvName;
-								tds[i].style.backgroundColor = "rgba(0, 230, 64, 1)";
-							}
+							tds[i].style.borderRight= "hidden";
 						}
 
-						//i++;
+						//remove bottom border if bottom cell, in next row, as the same pvName
+						if (i > 0  && tabledata[i].pvName != "-1" && tabledata[i+_xSize] && tabledata[i+_xSize].pvName == tabledata[i].pvName)
+						{
+							tds[i].style.borderBottom= "hidden";
+						}
 					}
 					table.appendChild(tr);
 				}
@@ -147,17 +150,22 @@
 			function drawNewValue(pvName, pvValue, pvTime, pvStatus, pvSeverity)
 			{
 				console.log("2d stop light: drawNewValue() reached");
-				var cell = tabledata.find(function (element){
-					return element.pvName == pvName;
-				});
-				console.log(cell);
-				if (cell == undefined) return;
-				cell.pvValue = pvValue;
-				cell.pvTime = pvTime;
-				cell.pvStatus = pvStatus;
-				cell.pvSeverity = pvSeverity;
 
-				refreshPVTableCell(cell.id);
+				//var cell = tabledata.find(function (element){ return element.pvName == pvName; });
+				var cells = [];
+				var k = 0;
+				for (i in tabledata) if (tabledata[i].pvName == pvName){cells[k] = tabledata[i]; k++;}
+				console.log(cells);
+				for (cell in cells)
+				{
+					if (cells[cell] == undefined) return;
+					cells[cell].pvValue = pvValue;
+					cells[cell].pvTime = pvTime;
+					cells[cell].pvStatus = pvStatus;
+					cells[cell].pvSeverity = pvSeverity;
+
+					refreshPVTableCell(cells[cell].id);
+				}
 			}
 
 			function refreshPVTableCell(cell)
@@ -189,7 +197,7 @@
 					else if (tabledata[cell].pvStatus == "LOLO")
 						tds[cell].style.backgroundColor = "purple";					
 					else if (!window.parent.checkPVTime(window.frameElement.id, tabledata[cell].pvName, tabledata[cell].pvTime))
-						tds[cell].style.backgroundColor = "grey";
+						tds[cell].style.backgroundColor = "lightgray";
 					else
 						tds[cell].style.backgroundColor = "rgba(0, 230, 64, " + valColor + ")";
 				}
