--- a/WebGUI/html/widgets/plotly_bar_chart.html
+++ b/WebGUI/html/widgets/plotly_bar_chart.html
@@ -8,7 +8,7 @@
 
 		    body {
 			  font: 10px sans-serif;
-			  background: rgba(250, 255, 255, 1);
+			  !background: rgba(255, 255, 255, 1);
 			  margin: 0px !important;
 			}
 
@@ -25,7 +25,7 @@
 			var timeData = {};
 			var valueData = {};
 			var PVList = {};
-			var parameters_ = {class: "", "show_labels": "false"};
+			var parameters_ = {class: "", "show_labels": "false", "background color": "transparent"};
 
 			/////////////////////////////////////////////////////////////////////////////////////////
 			/////////////////////////////////////////////////////////////////////////////////////////
@@ -51,6 +51,7 @@
 			{
 				var i = 0;
 				PVList = {};
+
 				for (pv in widget.pvList)
 				{
 					timeData[pv] = [];
@@ -122,6 +123,8 @@
     							}
 								, bgcolor: 'rgba(0,0,0,0)'
 							 }
+					, plot_bgcolor: parameters_["background color"]
+					, paper_bgcolor: parameters_["background color"]
 	    		}, {responsive: true});
 
 	    		Plotly.relayout(plot, { width: window.innerWidth, height: window.innerHeight });
