slow controls dashboard: fixed widgets attribute names using no space to save page without errors

--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -2846,7 +2846,7 @@
 							if(value == 'undefined')
 								actionRequired = true;
 
-							if(parameter == "upload file")
+							if(parameter == "upload_file")
 							{
 								var tdButton = attributesTable.getElementsByTagName("tr")[tr].getElementsByTagName("td")[0].getElementsByTagName("input")[0];
 								tdButton.setAttribute("type", "button");
@@ -2905,7 +2905,7 @@
 				dummyts.className = "widgetPopupTable";
 				var keyField = document.createElement("input");
 
-				if(keyParam == "upload file")
+				if(keyParam == "upload_file")
 				{
 					keyField.setAttribute("type", "button")
 					keyField.className = "";
