--- a/WebGUI/html/widgets/2d_stop-light.html
+++ b/WebGUI/html/widgets/2d_stop-light.html
@@ -29,7 +29,7 @@
 			//init()
 
 			var pv_settings_ = [];
-			var parameters_ = {class: "", "upload file": "", "background color": "transparent", "table border": "1px", "table border color": "grey"};
+			var parameters_ = {class: "", "upload_file": "", "background_color": "transparent", "table_border": "1px", "table_border_color": "grey"};
 
 			//define data sample
 			//each cell contain
@@ -71,7 +71,7 @@
 
 			function drawWidget(widget, parameters)
 			{
-				document.getElementsByTagName("body")[0].style.backgroundColor = parameters_["background color"];
+				document.getElementsByTagName("body")[0].style.backgroundColor = parameters_["background_color"];
 
 				var display = document.getElementById("display");
 				display.innerHTML = "";
@@ -105,8 +105,8 @@
 				table.id = "display-table";
 				table.style.height = window.innerHeight + "px";
 				table.style.width = "100%";
-				table.border = parameters_["table border"];
-				table.style.borderColor = parameters_["table border color"];
+				table.border = parameters_["table_border"];
+				table.style.borderColor = parameters_["table_border_color"];
 
 				var i = 0;
 				for(var row = 1; row <= _ySize; row++)
@@ -136,7 +136,7 @@
 							tds[i].firstElementChild.firstElementChild.innerHTML = "+";//tabledata[i].pvName;
 							tds[i].style.backgroundColor = "rgba(0, 230, 64, 1)";
 							tds[i].style.border = "2px solid grey";
-							tds[i].style.borderColor = parameters_["table border color"];
+							tds[i].style.borderColor = parameters_["table_border_color"];
 						}
 						
 						//remove right border if next cell has the same pvName
