--- a/WebGUI/html/widgets/led.html
+++ b/WebGUI/html/widgets/led.html
@@ -28,7 +28,7 @@
 			var leds = [];
 			var labelContainers = [];
 			var pv_settings_ = [];
-			var parameters_ = {class: "", "show_labels": "false", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey", "background color": "transparent"};
+			var parameters_ = {class: "", "show_labels": "false", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey", "background_color": "transparent"};
 
 			/////////////////////////////////////////////////////////////////////////////////////////
 			/////////////////////////////////////////////////////////////////////////////////////////
@@ -51,7 +51,7 @@
 			{
 				leds = [];
 				labelContainers = [];
-				document.getElementsByTagName("body")[0].style.backgroundColor = parameters_["background color"];
+				document.getElementsByTagName("body")[0].style.backgroundColor = parameters_["background_color"];
 
 				var display = document.getElementById("display");
 				display.innerHTML = "";
