--- a/WebGUI/html/widgets/plotly_bar_chart.html
+++ b/WebGUI/html/widgets/plotly_bar_chart.html
@@ -25,7 +25,7 @@
 			var timeData = {};
 			var valueData = {};
 			var PVList = {};
-			var parameters_ = {class: "", "show_labels": "false", "background color": "transparent"};
+			var parameters_ = {class: "", "show_labels": "false", "background_color": "transparent"};
 
 			/////////////////////////////////////////////////////////////////////////////////////////
 			/////////////////////////////////////////////////////////////////////////////////////////
@@ -123,8 +123,8 @@
     							}
 								, bgcolor: 'rgba(0,0,0,0)'
 							 }
-					, plot_bgcolor: parameters_["background color"]
-					, paper_bgcolor: parameters_["background color"]
+					, plot_bgcolor: parameters_["background_color"]
+					, paper_bgcolor: parameters_["background_color"]
 	    		}, {responsive: true});
 
 	    		Plotly.relayout(plot, { width: window.innerWidth, height: window.innerHeight });
