--- a/WebGUI/html/widgets/thermometer.html
+++ b/WebGUI/html/widgets/thermometer.html
@@ -32,7 +32,7 @@
 			var thermometers = [];
 			var containers = [];
 			var pv_settings_ = [];
-			var parameters_ = {class: "", "show_labels": "false", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey", "background color": "transparent"};
+			var parameters_ = {class: "", "show_labels": "false", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey", "background_color": "transparent"};
 
 			//init called once body has loaded
 			function init()
@@ -53,7 +53,7 @@
 				thermometers = [];
 				containers = [];
 
-				document.getElementsByTagName("body")[0].style.backgroundColor = parameters_["background color"];
+				document.getElementsByTagName("body")[0].style.backgroundColor = parameters_["background_color"];
 
 				var div = document.createElement('div');
 				div.className = "wrapper";
