--- a/WebGUI/html/widgets/widget_text.html
+++ b/WebGUI/html/widgets/widget_text.html
@@ -27,7 +27,7 @@
 			var pv_settings_ = [];
 			var labels = [];
 			var values = [];
-			var parameters_ = {class: "", "show_labels": "false", "border": "true", "fontSize": "9vw", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey", "background color": "transparent"};
+			var parameters_ = {class: "", "show_labels": "false", "border": "true", "fontSize": "9vw", "old_value_foreground_color": "grey", "old_value_background_color": "lightgrey", "background_color": "transparent"};
 
 			/////////////////////////////////////////////////////////////////////////////////////////
 			/////////////////////////////////////////////////////////////////////////////////////////
@@ -48,7 +48,7 @@
 
 			function drawWidget(widget, parameters) 
 			{
-				document.getElementsByTagName("body")[0].style.backgroundColor = parameters_["background color"];
+				document.getElementsByTagName("body")[0].style.backgroundColor = parameters_["background_color"];
 
 				var div = document.createElement('div');
 				div.className = "wrapper";
